Added more base files

--- a/client/index.html
+++ b/client/index.html
@@ -1,9 +1,13 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <title></title>
 </head>
 <body>
+    <div class='player1'> </div>
+    <div class="player2"> </div>
 
+    <script type="text/javascript" src="easySocket.js"></script>
+    <script type="text/javascript" src="syntaxManage.js"></script>
 </body>
 </html>
